# workwork

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py  database.py  models.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: test_api.py  test_models.py
